# rbo

./: Cargo.toml  README.md
src/: lib.rs  state.rs
test_data/: permute_abc.json  uneven_abc.json  uneven_abc_sp.json
